adjust plex volsync settings

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:Kq2ceAsHxzG9ZQUmojQaYOBfwUiSZ2D82n2aqKzdSxGtmtmSaug/ndUDvPH4b255DCP5u7+daCQAs29i/wLVVg8=,iv:gfFX55HekdJhEug9pFjA50u2/pv6H75DOPyNuBGyqOM=,tag:p5t2pscnMC173j3GQuq/7w==,type:comment]
-#ENC[AES256_GCM,data:NZCW35jPhILsM+aLDBkGdMipuRJF0GsnmWms/5QvbjttfU2ddWKTklxs2Nk=,iv:OwZiIV54thh4xs84g/VkonXSlhDTDjgYP4APDYdEqug=,tag:H9jAISIPRc6htSkgoBQ4pA==,type:comment]
-VIP: ENC[AES256_GCM,data:2kdYYxf9NBGj0zwdug==,iv:gkF2MY1mt0r1xI8RgyPMtnjC3gK5x+W+bTA+7DVtqUw=,tag:Mu8dpWj17SGt2hP6XkJYFQ==,type:str]
-#ENC[AES256_GCM,data:IVAhFj+i4D9ILUnTf5BmqQwTnoZvqLZQd8HF,iv:nfGgxbQdcf7d66Je1gDIRWIOVqXF0upteAQ8ndH3yf0=,tag:LZthHHpVfHWE9vfIOiNqGQ==,type:comment]
-#ENC[AES256_GCM,data:mvTYkFqsgUlNS1OjComYUQvFy0kKe70IHAZnVHNJQFdhiV3HN45Btesf0uG/rEt//RtiVhh9u7LjZ7C+H+ByetRI03GQqhoxc2QSVNZMKnV9Dez9RJxwspg=,iv:Iaa6nNFPr73VZEqUr/E1BEuki2QYBegUaRhTXGqaVQU=,tag:dK5ppyBGKQb2Br4CRw9wFg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:dtVaLWRfQAGLklFHXH0=,iv:jt7Ywg6xnG0NpT0pYwTGURKbLewklzo6klTE6W/jshQ=,tag:fnmtQiV+lFYGmXUjx4Lteg==,type:str]
-#ENC[AES256_GCM,data:pgQfkUbI2lSW435iuDFJ3+i5H7CTDb354n//aTvaW0aszg==,iv:6H374OPYh48PjV6Dgh1XUIKf/iFzCi/2LE0CtIuh0Ng=,tag:WECzget3pDXiYsUEoaDVYA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:Ia1opn7uBoboDZ66Vg==,iv:odLolIWYfTWZ/Iam2Ctx55AADrporx1r3NKHvFCTtyo=,tag:kXWFJZzfQ9uuM6EPYkFavA==,type:str]
-#ENC[AES256_GCM,data:en+mheFvl57xQtDrAnHPSrTDsTVzYQWkyua8mwaJiVHnaoAMt/6ZfoEs9KMuiFQ=,iv:a/AbfRWsO24K82xMyFLBRsJEbKr4CAgARqYWmCDD9Vg=,tag:Lcd8e1Jawg0behAZMbngEg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:M/Za9WMb+T86mwhNuVtQ7dPseHIk2PILnsos8mUL3Q==,iv:vHx7Q4oA5AJHEMGwS88xUP0LKhzyHIi7Fidn4r4Q7Y4=,tag:h7kGt7kez08gJjnKUo7sTQ==,type:str]
-#ENC[AES256_GCM,data:t1HGEIzOdn63aB4KfehGjqC+6WI4uNH00KPmYyivrRZeGm0TXV9Ru/PewurroKY/JsH1LdPaoWYgStXXlq4UyxBEL7EIFTyhE6Kag45cjujKZw==,iv:TyvvDhEfsbZFk28qzuX6lOtS1jxq5oMPjwly1BjWMRM=,tag:H62ZnSWLLFLjPujDKvYJyQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:Si+f5y7I+isPA0PHvCiy,iv:E16qQJM1QSZZ4EQD0MG46IUoHhE4BRhgDQWbfMhVUsA=,tag:qyikeGex5abUp4D1J2Olgg==,type:str]
-#ENC[AES256_GCM,data:OBoFEZnnvdF+57TuK2sNDTDXUaPDPEQi2vcTfJMjAzQo,iv:H7JQdJvalleADmeh/h93oHIJO9B7nI1JDIo6oPekiMg=,tag:ME+m3LM6yeQ4WpZYGL8VUQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:I0y9x9v/q3vZvhN0dTls,iv:nASDsiJF5tmuXNyEJBWVztBdI1Bauoa0pgVg6DxsKnI=,tag:MMyfqRiTCglv5wZddVmJjg==,type:str]
-#ENC[AES256_GCM,data:OnPxAgGg52Cz9+Z47mzkTHrsNviVwf2ZlT86QAqrLQ9V+tKJ31WQMDkMrzQiJuXRPgWGz9qTrLWvLLWMXqClOcXfnt84PkhFlAU3Y1j0UP4=,iv:Vq7I/ywERym4OmWLd0WeY5NRt1KQEPAKtbvmIxME+DA=,tag:BlwmpEvNYUa9vl4kVLLC0Q==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:+TOARm0/G/vq0fGP7xpA,iv:FKaMM0LoQxKs1vrf8mcKbrmkjjdG8F2l2se8idfamII=,tag:RSww9rh9oF9djVP4ztOXnA==,type:str]
-#ENC[AES256_GCM,data:jgUWELgU39oard+a8b43wxh3qupSS+w44S2K/kM4n6X9Fooh1DJivq00KoVgf400W4tScJIHxPkkni6ENePBA+kcglKboznJXMhnuyBLpCmjipQQDHco,iv:e3/MeOQ4wObUvJZuvlCUkAXWK4o1qZKMPyKR0OAdAiM=,tag:0O1JQQsuGeJ4xhqrcQcezg==,type:comment]
-#ENC[AES256_GCM,data:P9Fgz+/klY0ADKlKxznYftgZdn9ZRBHBDuVfpE7otQVPSz8ImeIzuUBotJvjyzRsZo/ebIKeMZ6IMBupilw32uIfOAtMKphIfSW+uGoCbytp9xbnF9UWNMuETlknTHi1I4KRXsv0atKvtdH/5n03xDVomYDmAXpK4RbR5A==,iv:XFQRIKYnBCIq1yGWuGN2G004TIme+OTGQLjhkuGv2N4=,tag:5bJMUrwcaZyGCz/6JKJ/6w==,type:comment]
-#ENC[AES256_GCM,data:FNiLDBbXvQWpVFKdF5o7HJZfsuYR/r9Awbron0/FhVrb/YBezBw79j/cSmPpB4nEn0N7++I1kvWd+CaRzf8Gd6TkGf/4Lu0xQjUqNQ3K5is=,iv:Yt9bQRPuSmiDHKa1jQ1qre5tgl3ZWUtlg0V0jv7vyOw=,tag:7M+ErYcShSAMaTiuCvFo1A==,type:comment]
-#ENC[AES256_GCM,data:8RqWtpRxef24qzEjaMdZ+YBuHEalU/b9mnyzs18JM1CEs+woRhZ6FgRtqdYk/ENsuJbFhrtB,iv:ZeOWKv9JgSCG+nEwlXVEizPRoQhKeW3kJFOfCCjQPEU=,tag:YFIfAu/TN6tEGHx8Gxgoag==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:KaFkzL/TT9CFp0ti,iv:HBeyDSrqjZoeujdwgshSXi2H4iiZfqDWTsvkZgEYdvw=,tag:QbR2qmBCTMB0XG78Dni03A==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:gohRRaSqDfBncvA7TjKfkbI=,iv:mwXE5nUYwAfXPrPJRiN80TiLDVLFFBID25TtCDbxCso=,tag:XoJYiudqHEI0xjXjy8hHnw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:XdFZNxoMKL7euGaTqfWaFExikQgYeNyQ0DJBIaJtq+A=,iv:rRAupYOePqQ1Krbm4oV1mkQ+FwYzwFy/9vgCXid2Yas=,tag:zmVTMMWKN/QSTW39ycCmFg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6QYUxjPe6lCJgWSksEG8r7zBXp+ErOQGTDcg7hCc5HD58NKROSzqow==,iv:VMEpe9qMUAMYJP93dwCDq57UB8AYsvNYgWVFbIkpQlo=,tag:mgzqHxS2ALtTruvXbb5L6Q==,type:str]
-#ENC[AES256_GCM,data:5gqm8FmegUm043iMY6yY22BTGBfLkKOgALKxO7ZXQesEM1Bh30TFAPpyPQ+U9ZVsJHOZ43qFVo42vdLbhA3yXQ==,iv:NEMuSIk9Cexx75RJhyLv0srwfv1rDVq5Ihmzwe1eLik=,tag:QKKSvGEdHK1t0EK2XnhGPw==,type:comment]
-#ENC[AES256_GCM,data:DzHeMddTk8nkFEtuNkYUJf7upfm4afUBRsIBKWsL49EhSo89ENvHQpERntL3aQO/BVmetI6rDBI=,iv:2A5WbBoiQgsxyBZiPH6jVx5nFCDthjFuiVp1jJcDcaE=,tag:psdLG8ZjiM5jvi3qZwvlow==,type:comment]
-#ENC[AES256_GCM,data:Xa/Pq4ska7s4c+C42nqBIcMQ+rQGfsBYOw==,iv:BgWySRkoGBy9Al41qseJL6FY6NL1gKRoQWDuNNklm1I=,tag:pNRVvrg65gUD8gFFJnIAuA==,type:comment]
-#ENC[AES256_GCM,data:ONfIhNAJK6K4UvlMzBHZIoXg6GPbACdQ/Xy69KjQtDPgAp1Z1P+PkywwTSBuLukqH0t2V41+aWMq55d5nryQGyLdqlWNmHVilexpBPQ=,iv:xr/+7uhtNEcd+ljRxAgzLZTuDSUe30mDbjPwibN0nHo=,tag:85q4FDDhPbhZTVfM2orGFA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:kVCCB7DbM23V1xeL2i5gTxVjWC5zUKE/aF++u7Oo10m70NNKIkXYRFVmlFWufr19,iv:qvZdqAoy9GDHIyvStut5ANJfilncCIw8F2YGd757u/E=,tag:46551Jd5cm7Yt2wNDoVybw==,type:str]
-#ENC[AES256_GCM,data:FVb20uDQ9hRWuuRFMRuPJ3gjYNgWThJor8ErZxeguV184rL3rZ584hSv1a/KBjOMxQ333VR1ayDyjwKccUe2oJjHhOHC16s=,iv:qs1MxSMXD2p1MefpewvDF3nUOEo6uwkSdxr/Z6kj090=,tag:4JKpmevVM+fEwou+OwmRIw==,type:comment]
-#ENC[AES256_GCM,data:Fcblzz3oZJUHPjWJ/30cVeH5EYwJXnDsRHw4zRgRIeFdGRUtapf0EJOeCSFN7SHD13/aNbSP,iv:H92nRx3GVN5oMjqbagDjAKI4lkEXyuQluBKGLmREKKk=,tag:yMnkMvFdmGY/bpmSKp61zw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:F6YXdIOtIA==,iv:MddPd4M7VlNCzmunnIoUWNEu6Tj/iLcY9zLlmYWfhGE=,tag:uoByHoi6o0G6k87K1Yt4tA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:jFN8gyss4UGBZlPUGhuJs9Jbixo=,iv:XMCUt/TVq8GKTaXygi3eYbBxO0IA1/4hLwgscOmOlTI=,tag:YplcKVDKB8BFQcpN4c9Rtg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:NsDTCLlwhXmYU5s=,iv:yU8f4iAStDPvwwXqSkH8iCp5tAsLoQhepFh8Cps+Vks=,tag:fyrdDHPxTSDgw+gJP9AJ+g==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:Quparq4gQ+qaIcM9MvmP,iv:4dR7+hwLuhA/4KHhBtPFySU4dLQlUyzIZfJnY0pqn6Q=,tag:pfP4HQT40zv786TetMzagg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:UM4OcDOWDzgZnEU4aG+Ao7QhD5hqchMHcg==,iv:LsSI7okcX3j46n8L77PqUNWUokXNFR9mOWKFsfaJSls=,tag:JLQPk5trRY+mAxSfp1wg8w==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:4uPfLq8gxvDoG/dDmmk1wT+rwfQ/aKem,iv:Bj1nh2wKJ1jDqmvSh7s/TJducld4Wt9EHj2rZvS91pw=,tag:EgQ6b/OkRqvgQRmxKvtgUA==,type:str]
-#ENC[AES256_GCM,data:jsyrlYH/jBf+RiCWOUPH1R6oTPz+RYB2HCNb+caUhANR+4wujpc=,iv:Y4RqbpYg/4ROKA0nmzsYFqfn30isE2HCIsd0ApjN0B8=,tag:1NLQ82gRyDZDfWmGPF/I5Q==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:bSaWqCyLquY3F+FFYa0WIuv7YQg=,iv:ue23Q3aIk7d3l+93Ga5CzkbuXhvk1NLcM58Kz5yNYDc=,tag:IJ3N2OPOU4TFXshFELTb6A==,type:str]
-#ENC[AES256_GCM,data:Ffb8P93bbyPbI90whWs=,iv:emOaK2AlNBJCieLdvqVW/9wV8ilhPD5IdJyqtqYpAe4=,tag:GADmaXqR512lY6vY2rC5BA==,type:comment]
-PODNET: ENC[AES256_GCM,data:mS1aIHv59/JxG+PS8A==,iv:MfjaKGV4QtPWQ/y700wsAHGKmA/ViCOpI+/J0LuXSNo=,tag:T4yWWnJNT+jL+dY8E4Ryag==,type:str]
-SVCNET: ENC[AES256_GCM,data:dwBZKSuv2qZlHJoMkA==,iv:01gwQsE1xIQj6iKa7jSBa+27dgW61inRVErBd9Pg2Cg=,tag:a7YZa+z7D7W4DdUPgkkjiA==,type:str]
+#ENC[AES256_GCM,data:BfJFJlReujvZOZ5u01Pmr3ntDURsK34A9a8kAMLvNajgraImCXtlKvfQog79UXVVPG/OhiN8TgY+YfjI9CNIEpg=,iv:NJ+qUZDOMR1jsXcC+SoT2YefVCriRXuXbBSOz17SZco=,tag:DycCOa8Sw4KPXulJYnLyVA==,type:comment]
+#ENC[AES256_GCM,data:SM5cxf8MT/pQdGblL2zSEeEVIowKKCgL+Vz6iv5rFtDbsh+hamotT9zGpSo=,iv:puEOx6fxvz9TdSdgb2AteukS06NGn9vntukmqTwTziQ=,tag:51kSMiwu32C91vMTztEFhQ==,type:comment]
+VIP: ENC[AES256_GCM,data:dKGijvjZODCkgJIl0g==,iv:xGeOoIT+TWU39z38NM38Vyzh1Gpgm+YSkJDuoKIV7DY=,tag:QVN+tgQBBjyfmDX25rpRrQ==,type:str]
+#ENC[AES256_GCM,data:CTUQ+603mtLQYr4t/HU49vpR0I6IeOguRCRs,iv:/OAjof20EQULFXVp7NyrKU2gfwQaCHMbcwLrhs26UlQ=,tag:MuChFXU5cEujC3aYplBrhw==,type:comment]
+#ENC[AES256_GCM,data:xPf47xlMDwrgbYzs5/QtPcNjPdUmHU5o8FoTfFyri8Mab97uMOw09pGVP6WnbbsleFjOVH4WnXAKvOWUrW0S65iHPwiJLuXvLTSIYSvt0EMKNyFVUzmaRrw=,iv:CAPPO3vxhossueu3A6Odcncr3l0foNzExz8IE9LsSK4=,tag:nl3f3dKkujyG+jn70dQKhg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:H6XallC/J+Mdo/LkDLg=,iv:PU2bQFN1AV6JNnqqqCGbABPP4kW1JxaAV0/LbUzGpis=,tag:4MuEHIifyX1xq78WTN6K5w==,type:str]
+#ENC[AES256_GCM,data:qxTkL8qHH1fSrbvr/NJZYKKGDRyJtTcwLtHscGwIZNDXaw==,iv:S1e+imRnhra2bqvNCzlTyOoGVk1nBaX5KC7OY/YZDak=,tag:C/Gm+4BNEgDzGmWsebfrTw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:JhTGb03PDojIu2B2Qw==,iv:JEMuIwGTX0kRSLEoxHiSqSDNTnecS0QeO4+1Ryoocbw=,tag:3IFZZ8SpHUQqmRpsOi+0CQ==,type:str]
+#ENC[AES256_GCM,data:N1jGBDskhRyDUk5Y9OV48Z3bOKFzoWvSZk7slO2bAt4/5B6ttYUhxt/kksaDr+k=,iv:fqH4TYw63w7G5unBxQ/kNqD/9lpNl2hz1YGLsdtujjk=,tag:XpVW5QbxzFfmyglQi1CD1Q==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:X+aD6roiMc2AT4k/stEwYc6rY2RBAxl2IKYGYtQCJA==,iv:T3DPFUH1KTd1WqIg9BiA0eTB8U0QdMxc+p1vqrPdOLc=,tag:chuGMjjMqw87yUmHPrFGTw==,type:str]
+#ENC[AES256_GCM,data:5WhWdoBEycrEiHgwX96eYYV9f1yJUwaaiGXdofWh1lOhUfHxCu1PIMLA6EHSLorCGcXHy2MupluRlJWj1Rz7FTWcjH91GlpvmRKReVdSnP8SbQ==,iv:GhnyW8hMY6PVC9Zvz3+PCeslNoP4aMXImeV/5H2pStA=,tag:M4la/JC8Xi4/Pmu04vlMlg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:jqTeUx8YOrtGxkIOKuEC,iv:WDjWg//dn9toAJV6rpM/Z2gJ0/mY+5wQkuA36Qda4dI=,tag:3O4P1qtfSXMUAAVHIQihqA==,type:str]
+#ENC[AES256_GCM,data:CrZcSu99B+omr32ymq2OEUTRkGP5spZBYMvF/B0tnrll,iv:VCWQVDB28pY64pWA5njqF5YY24WHH3AtllNf028f6GQ=,tag:6RJ+Kx6GQxGd+zm+WIceRQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:uBZxabNGhHll0rtRnJVz,iv:Jbe6GEWwFCTQFs19LomyTGIqZ44vZUVnTC7lc2G0EXk=,tag:CPYONabMIXX8tsza2NitkQ==,type:str]
+#ENC[AES256_GCM,data:sj2mv42e60+mSQTXgWhW3QltwKNt7Kb2BgWXY/z8s3RsPLFJs+PqntkuhlANyWAO49qkRDzgnF4gO8ueXmW5qzSwM8Efc/Wn5fdjRd3OOAc=,iv:xEQFbIW7dXGuDm8rp0FkTjwGb76HEGSD33xTrx5vLcA=,tag:NZYiphkxD68tygdmjvCD4Q==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:3CDdmUN7YpHZnMEQeg8r,iv:i/4QJ2Ot4X0cScl5Ct9wVpFm+F2uB+nzn381JGCPrpI=,tag:4AFAGqC53z3Wyw68+4rgfQ==,type:str]
+#ENC[AES256_GCM,data:0JvfZQDwqgf/iPEtTZZdMTNiRIvn3E7LagZ4sABQn9Zr2Q+0X9F1Yn5tL08qd54fJZ7Zp/YCDHa13zJ/nZOajzSvZnEMfmG0SROg0iUnlVwkiEXkEvoF,iv:EB5/QX49YpbuXo/2rnDgWLBxzmRzzFoskUPYTK4U1N8=,tag:nnwYvL2FToKCq1FlO1wmFg==,type:comment]
+#ENC[AES256_GCM,data:Y2sbgo8ECy9GaHETmfRKPzTY/u698yizcDWKIM4M3zndBX+N49eqA2uy+Tpi8KQGie5hAlMQs0ZYCv2rAQS2fhACOlcTE9IxkdtqdV+kPLZuyjVVH4NBG/J8N5rP2ww7Sp3d1sDQ16TLurGX7+jvcHfQG594+YE50xXtJw==,iv:BK5KoXBlYITEossHYIwXtCtdsa7YycNOAqVoFjbC0GE=,tag:yR3aUGaCOASQnmv8mAgUgA==,type:comment]
+#ENC[AES256_GCM,data:kKbYtAULw/DV7iw5GIaaRarPCNX8oHzJjV5IQfpSDlaTLoFdmNEPMDzDxu6BvXHfjpgTzawHPkBL71VbEopA5L/+l6BDRXgoNVw1nhzypWc=,iv:zUyKep0E5hFKkfXnxszewyqMzcvotvrwj46MDOzYa3Y=,tag:bNthRvv7tTEVVUmoM8/veg==,type:comment]
+#ENC[AES256_GCM,data:wPVcT55Bcj9O4KnGaLGMkzhDQQdsaLKPPJJCy7pYMeuVaVfP29jtllMhHG1GdkHMS2+b7dRI,iv:zHSk+T9yKiaEaZHqJCB014O+8KuNZfydcqZq2YgRWvM=,tag:DveK/LTxCVvZvURqG9wMQA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:+P8ekBEB5tqNMmXk,iv:UjRcpZkppguOJM/95KrrbEhfZwjfRFtTXUOASgHd3+0=,tag:4VLa8lUp9TBZe2OIwF9Cbw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:yF1VBNNvTnCM8mQXrB81ti8=,iv:4dugh4GmdYnPFkKeKLz2Bg0zQj2W2Wwk7OUiR88VQyY=,tag:cxXqQ+QX5D70YsmaeIQrBw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:5eSSmh0Ef1GPWyKC16MRwzc334FUfFGsvixE+D8XiCE=,iv:J03MHehopKkCgow+0+kermguEmbap+iabi7jKyp8enE=,tag:RSSpkjH2pn9ARYNiG3XP8w==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:8+Lx9VQJ5Z/ehPgJ6KSS6dsLXfamqWKmrhXbvpI2/vEntZAtIaP45A==,iv:DZ1jukrBnxSoVYbaeBlsKSd+3AGNntA4072B7mgh6W0=,tag:9IJm31q8GvzsqU0k98hLtw==,type:str]
+#ENC[AES256_GCM,data:rA5PX2rbfyNyNh/GSMpoTcKMY1MPdJxo9HHMuHcZ8wNgL39XF9IZdP3fwOfGVfZLB11H9DopEDLt1u3rgeIGEQ==,iv:TnvHu5doWcbLLQQg+jE6+1k/INHEqtltOKmy6RBPWLY=,tag:3RN+t5RHQK467/TvdFgtdA==,type:comment]
+#ENC[AES256_GCM,data:tHJ0l4ikNjV7J+eB9gxoEUpIGSJIaCrY/7PZM0wYzrZ1yBgfX/k0P/fGzqNBCqWyXYaNiY53V2Y=,iv:Gk6IrUCarTPTOR6VugNHfstGHD9pQCYOGOahxnhUUFM=,tag:BwrrnjvrCaGunBSaL4u2mg==,type:comment]
+#ENC[AES256_GCM,data:Nf8ZvWqpD7u0Pu6dvGEcTlSbUEcNMCPEHg==,iv:mV5hW5IekfIr8wP4aCM3Eql1vnyg8v0XkVvgzMz5uhA=,tag:kzqRfKLzSUS6F5/L/2VD5g==,type:comment]
+#ENC[AES256_GCM,data:Sbi79t+2SM6bTJADkXGy36UxM6KCQ/J3LrRQOZPCEugv0Sbm3low1zXc/o1HAVpQXvjDXmQj2utjPB28hq7osjowgs6Djd9Qm4ZaTg4=,iv:6cDnmXZDGPuajLiQf8HRnd5vLb3tWpggUHOP4Qm8VR8=,tag:qRsF7Xtkrr03wV4524Ff4g==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:+6tEvdE+Py3eCFXZR5kyxiq8g+rlXAUwRgAG0QRQzwMwcaYVzrnXVS7iM2hXsFAe,iv:7VSeIw8x0Up1me+5+Vs4ttPoAd3sTiQNg8PtK2AQml0=,tag:kr7il/wAV36PsN4KL7/Duw==,type:str]
+#ENC[AES256_GCM,data:HLjNaPrrmc0u0zI3P5BXefrW8y5cXF+BnvuwhDD24Y1odX/cmi/6zZPxzyINtzSXpZD42PILqOXpvenWmK5VMglh1UiuHlI=,iv:b1NzBApcHeoS8YnDMHTOedkWFNTp58n/w0Ek9G9LzCU=,tag:nnpRzzMPXBj6slGjI+KA7w==,type:comment]
+#ENC[AES256_GCM,data:9v3fjXSEU8z2yWMRva9LRosoopbFXzT1xEmlYKMkFWuupno79NP0xHzpF7mN85bZxPgkivoP,iv:j0QkaFfqg0lFU6KIs/UrSq0PtFwtDFSmK0nDP/32N5M=,tag:3BwcAj/9zuGCtUxSbscoPQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:6HKAiAL2jA==,iv:kq9B27EZDll0Gh27Jaj6JmYyD/ghgW6nmHQczKNB9+Q=,tag:SPnPHOI+H9RN9fmDjIiVjw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:v8JmK5lde3Vayd/GSqQo0JW9Bgc=,iv:KXZil5yt6JmQRI7G/Cg+HSbQRWDCBMYmVOXLR1yBU1g=,tag:6yQAm2lLKssMUYEIcKSK1A==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:v+OdwxXCHE2UMBo=,iv:YbO98oo4ywZgcuBiv/tjOmfVaHRtFoxPj2j0Ly6H0dg=,tag:Od44tcl3ww9kC0alr3EJSw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:+NNizvMPPCzem87Wya91,iv:hKm4wL/BdtmIRNPy5sL2C9xjloDOVA6CBdDEGrx7SxI=,tag:RZgoSo0QL8xIlx2tA9XTAA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:fylNGlZ9+J8feyGdo/XAJUR4TQcpjy+h9g==,iv:AlopbS85Xw18TF9CncTc1RpDNOxpINm4yH6HXtco7dM=,tag:iHLIS7bho7iAPeSLOhp2vA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:AcdN/+IN6avfikXD3r5XiGOsTvbOmc39,iv:EYN8LZHiQWk7OEgpAAp3ydB3A09QFu1Ia2H6wx95uw0=,tag:WSA9ji/08XBG0ieRYKrRyw==,type:str]
+#ENC[AES256_GCM,data:rioTcQBCeBqtH/W0YqQvrUbicVDLEtFE67XgWfAwjVVYXWpE8N8=,iv:PknpK4JdCqhE/ALHksF4eZdw4S/7ndqhFMZTjlZBq+4=,tag:7TJwRD4ml7OPalkDPXoonw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:QVfz8tNchm0PyCL5bJXwxQNtRsY=,iv:+30JLM+92IrrRwn64RmjzX67e3Y3icePE/LHsYICi4M=,tag:qNhNmXRegi5Jm6LWcVOhFw==,type:str]
+#ENC[AES256_GCM,data:/kWE7qiqVnfmVL1Lc8s=,iv:+ibc+WE/7Tb1RnO/8KEerMx9UqcusSaQ6bTcLKjUq68=,tag:wqzrOODrMIWq0V+3LwAULA==,type:comment]
+PODNET: ENC[AES256_GCM,data:6J7Y8ZIsCfYDu4Wjvg==,iv:J69wPKFhPVkkIyScazVu8vOOTR1SDEAugcP+mbrqc/I=,tag:r/kfhCyeWVI3j991WfJuwg==,type:str]
+SVCNET: ENC[AES256_GCM,data:NgEWFu2etjou1+OXzg==,iv:BKZeYIB7kaq++rhdQI8pvQmbONl0syIWJ9gDqlYZcQ4=,tag:bif7t2e6TFpyTppBAvWasw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMZ01DYnVROTdUNlFTdHpH
-            UHI1ZEdKWDhId0xRakV2dis5OXA1OXZLWkRVCmNTaDBEekdBWFhxMXdZY0xxaHJD
-            dU9NRWJvTmNDbmhzUXlKS3orUWFUV3cKLS0tIGNvL292WEFQU3ZZeUpZeGt6SVRw
-            WkJJR0J5bU1mak10OHE2L0tHNzhmQWsKz82cEYuMtADvVhUyvncYLr90/BMkuYIK
-            ZpmPi394o+edkVk8yfqxHf9JHbgnXi3O7nA53mBkrNvqqDgYVJi6Og==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMmtpVEZ3bXMxS29sMGZN
+            Q3BqczhmcG1GaWJBbGxsRjBkbk9IUThVWEdNCkpPc1N4YXZVaG1IQ1ViNkNuWUUr
+            andLSlRiR2RpNEIwR1pkYkJqVHFRVlkKLS0tIG1EelU5Z1owUnZSaWQvaTcvSDdX
+            ZnFYUHFjTE9iaDdwQXJyUDltK0pOTFUKWMt12hKXbnjjqUqJYH6Xpqx/TDxDBgdx
+            6JHtDfIFtqtgnjIMlaRBiJNrBgfVSVrOdM8TypkLdd8VeSgBvn8DOw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:29:28Z"
-    mac: ENC[AES256_GCM,data:sIv7gWEusiJuKebYZ0q9hQdnkuCrzgv+KA8isGg50tDw+ypiNlq1kInk436QisphRrqBL9xroHubaQ0Okjji1mXyDY26SvKjoL4jVVqyK0wFCN2yqcCy7EsT6PaL9+yXdoEG+xVDWSoGXT8ux6D8mNJ1g2HeeHlXY67nuL6ybIA=,iv:RmB7OGpuqiC+ih1VDwYdXvznLl+nMhYbRGqq9LTotSI=,tag:xwWEIxvTSCXBXbvI3PugBw==,type:str]
+    lastmodified: "2025-01-10T23:41:07Z"
+    mac: ENC[AES256_GCM,data:z7ykmzl7b9t7G4VwNpM4OvrB5QTRRXAl3yywN255ANY5Wvo3oZI9zkavRlWuj+Xgw6KNZo9vGfPK+reMg2sDjksWZPNLZBTfdCRgf8E9xv16i8AGt0M36lSulV9nMMEZNYkZ3tIGztJ/vb+D0vxTtZoZ4dhhl5AjyAav/1rbguw=,iv:sIPELdyjOipr8BYEQUM5uByHIcS8xwvEIcfiGqTQWa8=,tag:sXp5JpJMQQCt4kQnFxBf2Q==,type:str]
     pgp: []
     version: 3.9.1
