--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:yg0Yl/PBT3BguAQ6cxslXIASU2lCVe0kgor1lZ9mVICbbvdN9Kln8hWCZBW3LL/qZlYwUDPcRMfCruBGtIAQTKs=,iv:GtENyh51+BandgycZV9Wp9gTHBDwMA2b6Tuzprye8GY=,tag:ttSuS9EP61d1NxLM0MFUpg==,type:comment]
-    #ENC[AES256_GCM,data:fe05gvv8iCh5qdSnG1t+axO7nB+Ky9rfWsw1CEhD31csFreseGH82fOKi2w=,iv:CmJ0zi4CNQJOjh4OCf+WN1372kFDRDLkesZmG6J5kvw=,tag:0Li/ymzQJirOzFwew8Cv7w==,type:comment]
-    VIP: ENC[AES256_GCM,data:xnr8LehD5hNiCd2UhA==,iv:5AmOzyxqZISUoSag2d5qnwXoLJwE9GI6fZEnTIbCdWQ=,tag:yC84BaLC3P3Bw/nJH2MIhA==,type:str]
-    #ENC[AES256_GCM,data:1StGXQZoDPOjqNHO1RQTM1Cu8zQ1wcTUN7rJ,iv:sJKnl5h8P/v4c3F+D/Wul33gn4ttgj9zbWlWtbYCnqo=,tag:oiLPMI9qr/HWGLLmodxLkg==,type:comment]
-    #ENC[AES256_GCM,data:mU0CSL2pMu3AvuQ6bIKl5JNxYG78mn5v7JSYifvMeE44N9f2hI7JpkhFwU0Y4lh0bZDXP23MnBISNDSO3JclwHz0m/Ov8h7Pg/ZdKcEVhRp7gFV/REalxnE=,iv:uBE+OWOcCM5ltLFAS4DdWRWNcDs3YelGJY+fHs6IxvY=,tag:SEb40QZynad53jmDidy2cQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:tQZdRh+8S39/z6Mn33A=,iv:06ulhJHZh8cB0+l5AoFbycXzvUKaCupQ4H80h9/UwnQ=,tag:D0/TryUPXMlC/RsSptAyYw==,type:str]
-    #ENC[AES256_GCM,data:PV5+SMwe05S/vz2vhZnXfdvVnNM//tRkkAcqskMKobOKxw==,iv:QGzvGjZ54BMCib1KF6cSPERIR06I2oqsEMNqyRHe1HE=,tag:uaR2dODvyyBbvmNTml/UiQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:zNuV3eyEVl/JLVAhVA==,iv:pNYpBsPARuzoDW8AjFGdFr21l7G+GepVQUTGKSriEas=,tag:5YAk77tlVlffLJLvlzXSUQ==,type:str]
-    #ENC[AES256_GCM,data:nW4zuy13GTgkDlUEINKsQMsVGOtqE9PZHJpr5xBe1ZAh3RM+y+JOw+1CmOBpRB8=,iv:vOu600KNtQ25a5IBZGwx0UlXmrvSeWYrCLORcVrGRSA=,tag:qBeGDD0GYMhA6da7KpVA+g==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:P1lxUS3MoDtsc8VeZPf0gVhJopgC5P1AOBSkL139CA==,iv:/KC6GxASLjGWPmWZa8dOgTSZhwFYyvAaRISLUtL1HGc=,tag:dkP/EtQjmLc0YCwa1v85qw==,type:str]
-    #ENC[AES256_GCM,data:yGWWMBOp+aQCJ0B36hRFU70BT6Y6eUoSUyNU5Hyx+unD3XbB6hzMYr/j3TFTJWvLEjyS4Z3f/usjycVCHchG0YVuauYQOU5wovDZBQWdZv3dsw==,iv:ECPAHfpz4oPH/lMtq1Wu7pnzDmPxEtUTYaO130ShQm4=,tag:vCa/E8BfvRSflKAQNtFlFg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:zkCyARVULeEcfXnLPXCL,iv:ioOhdUfSsHvxWufiaSc8HZmRTwigoT62Dd57OvV3xXA=,tag:bx66PJSYsyrUoHawF9ceuw==,type:str]
-    #ENC[AES256_GCM,data:Jb5/jolY97JzjWZTujTcuP3VQOu8K7GKbtNAcmkIVx77,iv:zydIUzv+Jg63g5LlpM+FLtP3qej99jqi1bbAAsBH4fk=,tag:8UnHGZYVHGtjuLGLrBKB8g==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:9zJVHcmAhQOsEktx7HgV,iv:tjfevV9SgJCtAjHj8If0Vp3codtzxBOHEzJLB/QJ9r4=,tag:MRAY8QQT6v5ck/ZytvGrlA==,type:str]
-    #ENC[AES256_GCM,data:/lxMKSFYkLB94XXd1bKUdY0LIgIGYN2wCZAnBRTz/UfgNxzdqmIuGm8e31vCvYJmMqNHJjdANp3crWwslk/ly18x5xBz8QkJ/6JRXMBLZXc=,iv:abhw8AVF2qsR8Nd8GbcCF+rKa/jGzMzk3sKYp/auCfQ=,tag:h2sRwP/BY6SZuPiqKrESUQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:zFCnPsuT/GTKiUSPqjii,iv:9Jxs5isDn5vd7OjjJzkufH+mo2dj0T0CAkXXv3cGulY=,tag:CrmrORYxaLGAIvpWaV+Yug==,type:str]
-    #ENC[AES256_GCM,data:rQK8zBNWUZUccsZRS4iD8guLWSgU9StGKYncwi7E6yyqVT51kDEY00dSByYvV8U2Dciz0KjL/ubvLauVwSSJjmZYx/RZ4xSRYWVvEo+2ktKHHzU5w/eK,iv:+tmoskDHl99PBmx2zagMDeUXX3gljg7lYvlasAZ8/ro=,tag:qsj9iu4U4FcIX+szFII1UA==,type:comment]
-    #ENC[AES256_GCM,data:rSr8Kk3TnnV9EkkDeKu+RpfliRwaZSFs7vSCC3+k8ao1r3fOveQvRfEd3Wyeao9a+KE+FQ4tvlmMDmQnFbmwidMLTptZzr0SWnDllqw8NlgxJ5ASp6t4dO6Ciwh6wYpGTBimsJyqCDtg8CRc7UF68w/JS2X0/2SybK/reA==,iv:ICUwDQWGXb3OkD2YGO7E4JYCR7VBNgksDkLQpFNAy2M=,tag:rCXTQqfJrOlug8OU0svCrQ==,type:comment]
-    #ENC[AES256_GCM,data:VjYoEUtW9t501M7InFxCwLv9UStA53F6tYbWWEtjv+GHyQv+pZyjATR1UQVC5Azb4bkmrwLuT02E3Y/xWyZTPh+xIvy0ZH8LcVYPtnk6pyc=,iv:pu5db4+WeI+k8ZZoqHbpf7zlsf2Y2wL9efbhA7Sgr9o=,tag:Ix58mjYJnR2ksf0leEKB9Q==,type:comment]
-    #ENC[AES256_GCM,data:za/dfiryLz+6SDTJNjd9bdSSV1oZ1Nxq3CyiqiCRIeL4R0zve+7Yk+OairY/Rm8g7d5zuOF+,iv:5GYMFiGfkGQMb/3VBb205Dd5MRjpHlvGSahaVEb/6WM=,tag:yysYw6osLMPf9wdn9n/5ig==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:yrxdSrNkxru2w5rj,iv:gsw3/oJ2h4BV2EST83O8dtbbE7LluNSHqDmRFPvfx5g=,tag:jrTStsqpxgNN0KVN09MDnw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:nQjhxCqkIGKQ+hYLEPaV9s8=,iv:1EMwTmF2wIPMYwNw/TnIzOi/MxM7pT87A54qrnjZ7ZY=,tag:pn5a0LUwRE0g7CuHUr1LjA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:u8RmWISFMnb4AUYfJvmAyFBlLDubQdDWwqJze0pRMeo=,iv:ZbtLz2O5AksKwiHpyTWagh+axUIU2M59AP09ar/SpAg=,tag:4H8yitEBrUXsGox/x8VoCg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:1v7uwWlbRPRkQ7+PkZmdC2iR/E8DgrwLutGc5cA9CjgXCTUSIQoMHQ==,iv:ZOk1V5CCniue2VvjdpbCutUen4BlwCcYSdY/o3UhSLk=,tag:1PXW/depQP106t76UNA4KA==,type:str]
-    #ENC[AES256_GCM,data:udVsPQRqU7H+K2+5DFN8CVZVpwi0p2sTPMKZ5WM99E3nKLbc7xXcOSgPLMWtrZV1FGmwLevm1WzueCcYE2bBOg==,iv:CISgahFeureLUcwtuH7xra8TwmLTRA02LZODDRjBdsc=,tag:weCe2+aFteOcTkp3AxhB6g==,type:comment]
-    #ENC[AES256_GCM,data:k+V3+8OPrtfDsA1diWBQxveEBJT1KhxXhFWmoOf2eq3MmJ/hYepTLs9xe+L0XS6gZ08HZdzfBxg=,iv:SFOpljEJ62qhLmEMZsCTbPvulmao0IFgjLBO6JyLQEc=,tag:KVUDdmUSc0Dq7BDcw1H1LA==,type:comment]
-    #ENC[AES256_GCM,data:S+lc7CebSIVnFba0owLzT91giHJr7qCeQg==,iv:ehZRWk9fXsnJHAKvjmf3Qc3l7ak5IPYYuDnoswAFhl4=,tag:bzSpZsLzccm+Cmt81IGfEw==,type:comment]
-    #ENC[AES256_GCM,data:sWqyRQBsA9O/OjGhDWjNXUTR35rrwAyCcXmUao7O3bCYJA9vpM14sHHkn+E3QvAuwEPTnJzj90ITjDzn9raOX+fnp7mK2OwqADjOz9E=,iv:g/WrAAVVdbE8GVC77N5y37sv2znWdMLWDAXfMTW5QmA=,tag:pxmRTmJfATR8sAvZNTPpBQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:kvk3wA8PJ/uMTlxZV6Way2BC503yOm7iZ2fYMdM2uPOpSvvxVOfh1aT3nj7m75ac,iv:XnozYBMnfxd0pP05p3BJcQcKoQImO2n67pbBg70jpA4=,tag:vY9DEnLgwhdnm/qBeKs6BQ==,type:str]
-    #ENC[AES256_GCM,data:t0bAC6CCC/8QD9kcUDPE24l5HQ2Pxu9aSxDS8n5juXdVAiuQwrmJ6UGCAvB+uetRZfCM0LCwU3Nk9CZ/LvOH6sjLkkWuQc4=,iv:Vz2ZAdOCwDPi08lqn2Fi/CTvxblcYOug4uDsbtUEACw=,tag:G7alMZfeaPQz3frAV+Ni4Q==,type:comment]
-    #ENC[AES256_GCM,data:0bQQDvY3n2cUUpyi1hEiyBAAATgdB+DFGHibbO4fCmxczIIjO6I3HAF22izu9tCxjSr/xqZu,iv:wunyHHYfa48eueivl62aYGYjZZ7u9YK5UBzEwwooTPE=,tag:myPOzoeLGHSDtYG9OZKfMg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:zfTTJBoMxw==,iv:uXLbljopfzlrkx+ThIkUe80WyTj7pD2kV/sJ/Sj4POo=,tag:RuYeBRCjTF9EHPX4jieASg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8jnf2Ptw1hNSShWyMegdWIBThS8=,iv:2geUsniCYOfghCBnFccfZ7ZLOL878KKkEG2Taj9E1nQ=,tag:vqy0pW+Ua1+UjQIMUkoutA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:4lbenHUnyOVOlVo=,iv:26LBkf/M8L6ooYyKtro6BvSza1HAUqWmrKGBTruM0+I=,tag:s3rWZ2gOVRF/G3TnEglfhQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:tyfEBnzqPTRj/QBY50Q+,iv:8piCIuK3AlYx6NnZRDBZu/4UKq2he4aDX+juKXsbH54=,tag:XW+2sEwAvMBTmXkDJfBiEA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:vM9I/ebeTFc9EWgyp80V3rkBJDqKCMht0w==,iv:p0AVmG40WM0gFe5mIsO4znFkdNlMaF7xtPLNZoA1UVg=,tag:030HtftOQZoQQO2nuIMtmw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:rmtp6000FSPH6tPE3jCzrbFhUJfS36yr,iv:bm84mQFtC/dvumRplCANYy9mGoSj4E5dkfC96gxYX+I=,tag:pMTt5lLw5j2t6Q0n3yG9vQ==,type:str]
-    #ENC[AES256_GCM,data:kz+gyo69lNBk4pgncJDr7X49r+9t7RAhJAb4XlYCkYwS5JosyOA=,iv:5O7De3jD4rTDIWomfIzoQDebHhYSfAEon2CT6OAr4AY=,tag:Yr091D/QEYqih/AkNviCOA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jv/iyfcvUbKs/Kn7Ut02/OJ7N6A=,iv:KxOMpD+i5RtjWuAc1aA7SuBP1TrsCmE4wnmlIwoFt3k=,tag:V62a7AvI8af5UmPlDepZFA==,type:str]
-    #ENC[AES256_GCM,data:ROX69qCv7RCZNngjhGU=,iv:gEYBbQHImVzxqLlDvzF/Jsn2itHnNXdJ9NNWzZWjHOw=,tag:zgu7D4xNMCDe0MkiT2HRew==,type:comment]
-    PODNET: ENC[AES256_GCM,data:LxgYrwgKh4rjZ2C4pg==,iv:fOSUBiVtq+KFbad7OUdUGIn9QPtrhyP3vsIOz8Rl8s4=,tag:nPcXRzK9WEcp0EfOor1E2Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:ezsvYpa9mhuSoeLWuQ==,iv:ddXyMkwTml1pY31GwQmkkUppLo9AEodMbCVEguOpE3k=,tag:SO+iktO25DPwFViZEU86YA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:GkWupg==,iv:3Egr8/PblzQ82Y9Roy5LvN+fgSci5WAqJg2E9Y7SH0Q=,tag:25VndTjWfU+cX6K+tj6ZAw==,type:str]
+    #ENC[AES256_GCM,data:aqPXcWShNGNAlSpnQsCTtmygPFIE08Y8pSQ7VL+osEsONCn2E/6J/pIMGdHgYiixCUGG2zy98y4Yv3QgM55TzMg=,iv:ZnnCr1Z0H7UXG2t6MJIQ7MR9E1awRr2tm4lg7ctOl+I=,tag:QGfWyN68LK0L24jEjYFoYA==,type:comment]
+    #ENC[AES256_GCM,data:5Vaojn3c1HZPZe4UMsf6jT2wbsBXD8x2/rNilpxdWvLD4JJIejcS1DVhyhQ=,iv:OsBjNasI2pamf8adLk4jGJIzDGslVUlOZ84X0X/NrDY=,tag:v3azbhXJ0fRyuwkjcMbykQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:iVu7NiD0uZ5NyYLbQw==,iv:JwMZP3avcTr1Dkjfdu2xlL0xLuDzcahtCTw2D4au124=,tag:BNJd4fPE6U+n6inyrN/zWw==,type:str]
+    #ENC[AES256_GCM,data:RwiZSRFVLWsbb2ode6n+xPfVFtot13vvR19H,iv:7BsExoLzEB+GcPuLVeCSsXdxG1fh2SS6D+zEPQYXp7o=,tag:JOEFB8MMw+h4xGWZzV6evg==,type:comment]
+    #ENC[AES256_GCM,data:lVrUxLl25KXXX9q6bgLKkv5IfGDDucQwZIFI9Shy0wbovKhvFpHWa7RfpV0wxBoP5IY/ZLqE9amVEyADtPa5h89QIKxPnUYTBEP8Aquytv7xtmoPJumDb7Q=,iv:odpriKTdN6agD1sF31LQnbLOutWuwdffqHvuKhnovDA=,tag:Ikt+5PEUJOc/DDAwNY//xQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Pg+05lv5XsWiV0buqPY=,iv:egrG3GnF9awkXXoKwRzDWVitJdy279R4/zJIHF8q3v0=,tag:K9AkuPZO4D5eu2wiJcROVA==,type:str]
+    #ENC[AES256_GCM,data:6MD2gbc37bV5EnEIvRdn0Zyu7ZHZpiuS0jVlNNyXqVjY6A==,iv:wRdlZQasq4ahi4TNL8Uh/VL2sE2yl9utffA7sbcId64=,tag:h7c4HioWUKxFUSDjXTkg0A==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:45whwOQVYP1gLjNoKg==,iv:JIREvi/Ohk72KZOhKWGuTn1hn376VhE3cZOa3uMG7Hk=,tag:ezh7FNSmNEhDTVO25IvSTw==,type:str]
+    #ENC[AES256_GCM,data:4ca2gJHO+jPeWPYHvJe/DFvx2UcA4dsgLN7JH+kNxbR5Oeuxdj01cTiLoo4jGEg=,iv:kXl3azCG6807uXwpYPKmIZ2N2fHQTBXZbL15zTH22js=,tag:wHdcXIMhwWjKW0hgtFt7dg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:0bXYphoEy2y7O2ar8PCycdhVlgnHZCeDiUlwncR2fg==,iv:KBRWBIxcxsZjpIENBlG6nGN4OgKteb5BOogkE1Fbz/w=,tag:tgkhDe2SxnxO84m9ZCNuPw==,type:str]
+    #ENC[AES256_GCM,data:hDDKUfP9ETwU1T1X7AB88g60vaHcVT7lKNBIbmoTHznEXlsI42zj+A7l8YLkGmr9CTUoeZQQgjYnrSFLOXV0DUmQckuPpekqGIdBjjmLmtFS7A==,iv:wCutpDY8mlkDchtJbo3SpeU32tiOLcP+alf8Xt8TAcY=,tag:N4T8ow0W+kRq8npQSgloyg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:zP5+dd8Y/n8jcDogTTdx,iv:SRtwxbnRJSwqDFAAM14X1QNRusx95z4eiGQ4fuTqxC4=,tag:kCqJbuAJbjWpIk16+BjtHw==,type:str]
+    #ENC[AES256_GCM,data:T4JyvPLk6Nkw+JhaSgmwOBnKt882xTvNpX1tD+qwCaqZ,iv:Th2nSKzROa5S5Sl5weari9JIY9veSAdXyAl7bKLMyB0=,tag:XApKtBZeNrAi2U/hv39c5Q==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:CtuJgNzj+mCkmmdjHDXC,iv:BQumjwEmpBLQpK8lmfhI2x6H/KYnsV7DqJw2kUWf4rw=,tag:KEkOs7Om7yQRpgZ2UgpQDw==,type:str]
+    #ENC[AES256_GCM,data:yKcgXhMao1Jjb48MOKL0r8ZRrxJp+mj6w6RGU74eTIQ6iAuLC2J19tvDM9dwFLasVXgZHWdZaslvuJYS942k1Ve2RZXjs2D64UsD2k/QiTg=,iv:11fuc8R45HoGnkTUAhZKj6oIOcCgDkLOoS4QPddDGas=,tag:PiD6IdjXY5Q0qLLXci5qaw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:CX2DENoSQeL0lXp6Cmnm,iv:HrJHIlx7DWfubsQaErSnqbR3k6MuVCrzxFJNHjj5DIw=,tag:gkVBCPjm8oO3bHYKyqxpvA==,type:str]
+    #ENC[AES256_GCM,data:pcjY/u+7oqrZOy+iq5L727Ll2F3IYbowA83dDxEnnXfcFPXiCXcH7eNV+NmLibxiPgkaVGy8+fcZB97mr+rEzfAOiAGRklR60sURO+edXFqhD6qYTFmr,iv:cSnOql4o5EeK/sLUGJzglzBpsOx6CXK5AM9KPH+TN3Q=,tag:dp0JmbzREwhI1XrExENPKQ==,type:comment]
+    #ENC[AES256_GCM,data:Z4wIJpkebwxDGqCsHuLNQwhX5KagRe04Veap9iA/kM0CjACuEy3x5ymUATsDQRzzPnbMFZX2JWeVeYjZkC3e1XNV1G8wrXDbg0qIDsMJEm1v55gPYOBxOL0qUpp6K1IdL8jS2hAJ5Pj7LdWkUZKNJ9A/wr69iPs3dlxxEg==,iv:Bl8Wg3sEoKot+mmjOCrCbNGLDvc1md1dJHhRAeetC3M=,tag:NDy2RilGdLsCZolmnqk8Ww==,type:comment]
+    #ENC[AES256_GCM,data:/eE7vVt31Bx3tDL4gqeThrAzyrCUIT9iKWKTyjNYkOeMAS22hF22DZazkeOS8lcalEJ6dBcRjUWCPdoCrGBacbYPmP/eqm1GAi2yHdkre/0=,iv:eXBfklvvuJBJbvVwVnbwTGFvJ9FWVolZbIXTBk9+lLQ=,tag:JhI1wjmOovhFNSbv677S9g==,type:comment]
+    #ENC[AES256_GCM,data:3cr7AFBXU6WxjEvfr5nkmreB3h6WlNuO7B8BCZmK9gKld7HvgNdeVkT9fZoMhNjTp3Dvtx6/,iv:t5PpdO5rH5w/jB3pOMv+Cf1muAx5J8100iKd3nPKtkE=,tag:KRfU2lN80DgAqNw19n4Nhg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:SpNgIHTTW7cjq6Vu,iv:rwIorVscfMDfsiiw2x9D7v797WdoOJyUjeSi5Vdt08k=,tag:Pd8mX01x75W3LNa1A02csw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:txIzNYDKwEz+c1LwOVolACo=,iv:mCGZf8EfCD29bzYuuI3TSYhxQBbttvMGxxVCk4T93Lo=,tag:vQxwuQZOGU2WRf0LFwKkXw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:n+MTWeX5PaQZanhgHEiqvKcyU1WtY/oaMm+no8lvbRE=,iv:Ju3FfVkiuK/jHaqsJRT3p3F8JsWl9rAS+pgV+9fV6V0=,tag:e4mkA0/QvsjtJ8sFq9JGdw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:JCYujIwzbvdQaA1AZM6JNeUFTtJTP0jGI0AoxbutJo2XiHwyXOyv4Q==,iv:L/xdzmwKiTmF26RFjaJiJmaSYGPxAEoXe1KlDP8x2J4=,tag:AlpxN2e9+p99BNX9TCoKBQ==,type:str]
+    #ENC[AES256_GCM,data:0UsIUJj5fsl4nfAIgVcjDQRoS2OOh38WMjz7l0K89yFpVHhBLeXJ9Ui1l9NhywkTw5vQKKXM+HPvTBqrAUo6dw==,iv:Yhn5R1S4+4BTzqwiNSwlardlDGuEJBGz/O8Q673tXUo=,tag:9sDrRqG7VsUXAfkoW2pTiQ==,type:comment]
+    #ENC[AES256_GCM,data:CLP7UE4yCDQPjOuofxsSWmOco5ZF9BnUFZ1Z6a9BY0ilPgrqVorQqbZDkE7aEgH7ToszYBTtHDQ=,iv:4m27jM4OiO+i6gymky0uNL/8EFbfNPF4PWqRFQbb2tA=,tag:LugsuYON2oyCZd4krBIMSQ==,type:comment]
+    #ENC[AES256_GCM,data:siAWvEr2RiaxT/1xcI+/g8yXPsjS8DnxEg==,iv:61Bkuw1VMPQoiyUc/lXNAfTUcEhclgO2M/Sa1qndl/0=,tag:8k9/1HkXvzKXZXuGrweECQ==,type:comment]
+    #ENC[AES256_GCM,data:J8v4x7zh9GipLfjxUTLRyPoM4RI080kh6jWcxXk0xamo5MSKsUxwuWVKA4RJjAYAgDxeYqbY+jMjgK0gVfxdIafQgyueBnIOaLlhVek=,iv:ZE5gzLVK8wETIca8VM9WK1XMS5VdQlH7Bn7o6pDkhtk=,tag:oGj29v5A15ryXdIX2xoNbw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:p4lQszi/KO0ZqPE4LE8rnt5vRSuN6zSVfOT4QzD21+LWc4+2FvSASYfJgHNEkiNX,iv:bgySfyxXV2LyaEiV76AFSsFWjEsbZkZlOcgOGe8n+jM=,tag:v/cN8574kyhrgBkrHYe4+w==,type:str]
+    #ENC[AES256_GCM,data:7ajNFtXu2ooNxc8odNGHjCxfBd3w0qcOVtk7TGV+7ZEO+5ywx5VSxS6Q10JXq3VFOpaYFYs+zHP2eqIjXHus+Kv4A2Qkilg=,iv:ook5QdSq7nmDkjNOiJQDZTWGXmK9TxR9hAO7xjlKi8Y=,tag:Lr9haVt9kaVEVz3o62FQjg==,type:comment]
+    #ENC[AES256_GCM,data:30wKo8q+3+jcclA0h7N/2jGwjK1tosUzSMqQJPUXInAY7YCgrI8MrMCYTzG10BAEeUNWUbTS,iv:806peBuo8gNdnZDHMLC/pg+5WlFFmdR15mGCsHNYpnY=,tag:vrpsGSfIimCyklk6rvhFFA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:fnnaS35EmQ==,iv:+3wmOk2VDEp+Z0hFWZIunA4OVpdfEz2exN38BE1uJMQ=,tag:r+TYLKib8BxRmarXMyG7qw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:dviSx4ZLf0b0UC6LshGFvPpNbc4=,iv:ivQrR3qMi3VpvqCBcgRNbNhvWZdSGTGw2YsjM2lvnbM=,tag:xfbw23OyXIg7QmAr7TXFtA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:EYSHxdgHwDiNx1Q=,iv:x+nrW6P8Y7SCrwytHyqwxLix7OLJGDpt7Za6oBVvOQs=,tag:TKE5ryYFbVxdqpweb/Ug0A==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:60/zepsg72lijaiaAowk,iv:mWwW5qM9oRXrpdTx0+YsdsBKNIYFjYKqy1YHzF5HwKE=,tag:KUre0LzfCthtd/ZG971cWg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Q4gVsPEUNW7g3Sw5KnHnVO6Jj3+qBnnrbQ==,iv:vNBJStvfEBdabCN2fxljcx2/V3gDsK03F+ZFmQYr35Q=,tag:RBy2xoDuq1PRyTWgkai2bg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:YBOms10T9js7X99Oc2ikGy61vkc8Mmft,iv:dU9pL99+cX0eD36mSivPI/F0CsD389wjGZB14TSh6XI=,tag:sj9vYrSEkFHtflLKYjXc5A==,type:str]
+    #ENC[AES256_GCM,data:xFdda+/Ng/jlnL7F/QRHZH1tK3b4XjQPiulbVTIVSx4MQcQEniw=,iv:u7nPuASQ8l9Jn13mveLFgncINBFZ1c/kO+edIICoRjs=,tag:uyzJ+7VYzoBv65yNZKkifA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:PGJZdnpxxcgAj+sHPnusCpjSOww=,iv:Bah8tta1h7x4BtUcjYSaPqokbcuVgT25xCX3/NKyU4k=,tag:BdetEJPAGh2PLFtLHbDMNA==,type:str]
+    #ENC[AES256_GCM,data:FcRusaLA5fC6F5yA6HU=,iv:corsTBtPlaGt8wOz/RavrE2NZABdkPvoAmnpS7WNlOs=,tag:3S+D0pCsxWuDlPK5H0zB2A==,type:comment]
+    PODNET: ENC[AES256_GCM,data:PTtFla30qKAiDjdBSw==,iv:l6hPrf+zv5Gjk5FRDTV8z0EDWHOFLc0QEKGa7SsEYio=,tag:i6KBad1UrWH0mp4p8UpJRA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:B/6vLeVJEc1oDS7N7A==,iv:W4L6RuzgoVN1/bGZkpOV5Yb9Wf+xDTnTCHNplFPKAO4=,tag:mqdaLExHGSoXjVUr3MOVVw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:2OIRKg==,iv:WfO6WHgLLcEu4g6aHfqd9WjFC66yqsjm7DcNyWv7sOM=,tag:erqJWtOAA4N8O1u+gILlxA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtNWs2cFlid0RMK01IU2o0
-            N01SalZ3Sm9tQ0FLRmZCSDZZMjVJQlNrRzE4CjZXa3JUT1B5RGV0RmMyWE1GckhR
-            bHRENkZTbzcwNHA4aEhpNS9MMlJTaHMKLS0tICtPREFyWkNHdC91RUVZcmMwYVIw
-            d0Z5RHJwbittaDlkRzI4WEVUck13MDQKwPTWdLNqINOkZMCpOiiSqXWl4rSrAzFX
-            ARpPAuk2Fjj6zQYlEkxH86tnCxwbusIIE15BFGB7giFlCv2BJWNgkQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjSUhlTDVsWUhzZlRuWVJy
+            T09wV3paNHFuTXNsNnNXZkNxUUxTbjlLaDFFCjhjQkxvc2h5bjEwNVpHKzdGVkxl
+            eWlFelVLRkp0c25NeVppT0tOQ3BEZU0KLS0tIDhrVDdBL0VrTjgyVEFVckpVcUEr
+            c1FCWGhKTzBkZ3FIOWp6OTJaR2dPWnMKEFAFnz9v1txkIh1eLQRCUT3pg/kNWujX
+            I7x9hWPJTns7rl9Sm2OXpggiPRPsGt8f8YvdvLFYr+wbp2iYi1kIRQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:29:28Z"
-    mac: ENC[AES256_GCM,data:siqHnVzMffu0mAUDDhSZ/bhB3/955zGW5VpCUdSPVcquVQDLvFq1QgW8QcoZiTQX9uGvuhpkfVIxit9dTiT2JC9aw8NYmWQa3vBfJKeTYNejn5lxMDf1NhQBoe0hKRyqkrNwpum88RyoZBu7V2nPfrIqMesvGgn3wsn7H/CJF9Y=,iv:bI6KQbF+FzuAj1LlFQfLF7arRQiZ57qC5V3f8u/AF1E=,tag:LQdttMmFvBaEYJ88IWYIdw==,type:str]
+    lastmodified: "2025-01-10T23:41:07Z"
+    mac: ENC[AES256_GCM,data:VQiD3XcweJJzCRiLhl3TZkU8SWbgQsP5xGPdDqw9F627TYXuPm9wbcgx4+IDNKS4W52tCnGND+onExUyKZp+WcSGZpFqs/+Wl0IDKOZVYfH2w1hyEGO5YccJFZFCwXWeG3CgopEq0GqpwXb4iKRttUf2EXGGMBxDAB2W67EjnAk=,iv:6T+olD9QU0JXO6uSdIgiNYealmFeETcJSGcDRhdCMf0=,tag:kZwT7eDlYJGXQa2nCnDCMw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
